syntax = "proto3";

package userspb;

//option go_package = "github.com/rezaAmiri123/microservice/service_user/proto/grpc";
import "google/protobuf/timestamp.proto";

service UserService{
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc Login (LoginUserRequest) returns (LoginUserResponse) {}
  rpc LoginVerify (LoginVerifyUserRequest) returns (LoginVerifyUserResponse) {}
}
message User {
  string user_uuid = 1;
  string username = 2;
  string email = 3;
  string bio = 4;
  string image = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message UpdateUserRequest {
  optional string username = 1;
  optional string password = 2;
  optional string email = 3;
  optional string bio = 4;
  optional string image = 5;
}

message UpdateUserResponse {
  User user = 1;
}
message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp access_token_expires_at = 5;
  google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message LoginVerifyUserRequest {
  string token = 1;
}

message LoginVerifyUserResponse {
  string id = 1;
  string username = 2;
  string user_id = 3;
  google.protobuf.Timestamp issued_at = 4;
  google.protobuf.Timestamp expired_at = 5;
}
message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string bio = 4;
  string image = 5;
}

message CreateUserResponse {
  User user = 1;
}